fixed column spacing

--- a/style.css
+++ b/style.css
@@ -506,7 +506,7 @@ h3.name {
 }
 
 #skills .item {
-	width: 16em;
+	width: 22em;
 }
 
 #skills .item .keywords {
